--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,8 @@ variables:
 steps:
 - script: docker login -u $(dockerId) -p $(dockerPassword)
   displayName: Docker login
-
+#Deze moeten los in de pijplijn gedefinieerd worden
+  
 - script: docker build -f Dockerfile -t $(imageName) .
   displayName: 'docker build'
 
